delete yaml class and make error handling and test converage proper, also delete all dependencies so it is better integratable into the framework